SSC-1466 fix dropdown overflow on small viewport

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-suitelist.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-suitelist.less
@@ -142,7 +142,7 @@
         background-color: @grey--e;
 
         .c-tab {
-            padding: 20px 15px 1px;
+            margin: 20px 15px 1px;
         }
 
         &__title {
